# PyMandel

./: .coverage  .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES.md  SECURITY.md  build.xml  pymandel.desktop  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/workflows/: main.yml
colormaps/: cet_colormap.py  hsv256_colormap.py  landscape256_colormap.py  make_colormap.py  metallic256_colormap.py  mymap_colormap.py  pastels256_colormap.py  tropical_colormap.py  twilight256_colormap.py
docs/: colormaps.rst  conf.py  index.rst  make  modules.rst  pymandel.rst
examples/: image0.json  image1.json  image6.json
htmlcov/: PyMandel___init___py.html  PyMandel___main___py.html  PyMandel__version_py.html  PyMandel_about_dialog_py.html  PyMandel_app_py.html  PyMandel_fractal_frame_py.html  PyMandel_howto_dialog_py.html  PyMandel_mandelbrot_py.html  PyMandel_mandelcli_py.html  PyMandel_menu_bar_py.html  PyMandel_settings_frame_py.html  PyMandel_status_frame_py.html  PyMandel_stringsDE_py.html  PyMandel_stringsEN_py.html  PyMandel_stringsES_py.html  PyMandel_stringsFR_py.html  PyMandel_strings_py.html  index.html  status.json
images/: burningship.json  gothicvault.json  mandela.json  nucleus.json  postapocalypse.json  tricorn.json  tropics.json  zoom.json
metadata_examples/: image0.json  image1.json  image2.json  image3.json  image5.json  image6.json  zoom.json
pymandel/: __init__.py  __main__.py  _version.py  about_dialog.py  app.py  fractal_frame.py  howto_dialog.py  mandelbrot.py  mandelcli.py  menu_bar.py  settings_frame.py  status_frame.py  strings.py  stringsDE.py  stringsEN.py  stringsES.py  stringsFR.py
pymandel/resources/: pymandel.icns
src/colormaps/: cet_colormap.py  landscape256_colormap.py  make_colormap.py  metallic256_colormap.py  mymap_colormap.py  pastels256_colormap.py  tropical_colormap.py  twilight256_colormap.py  twilights512_colormap.py
src/pymandel/: __init__.py  __main__.py  _version.py  about_dialog.py  app.py  fractal_frame.py  howto_dialog.py  mandelbrot.py  mandelcli.py  menu_bar.py  settings_frame.py  status_frame.py  strings.py  stringsDE.py  stringsEN.py  stringsES.py  stringsFR.py
src/pymandel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_static.py  testsuite.py
