[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "pymandel"
authors = [
    {name = "semuadmin", email = "semuadmin@semuconsulting.com"},
]
maintainers = [
  {name = "semuadmin", email = "semuadmin@semuconsulting.com"}
]
description = "Fractal generation GUI application"
version = "1.0.10"
license = {file = "LICENSE"}
keywords= [
    "PyMandel",
    "fractal",
    "Mandelbrot",
    "Julia",
    "Burning Ship",
    "Tricorn",
    "numba",
    ]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Education",
    "Topic :: Utilities",
    ]

dependencies = [
    "numba>=0.56.4",
    "numpy>=1.21.6",
    "Pillow>=9.3.0",
]

[project.urls]
homepage = "https://github.com/semuconsulting/pymandel"
documentation = "https://www.semuconsulting.com/pymandel/"
repository = "https://github.com/semuconsulting/pymandel"
changelog = "https://github.com/semuconsulting/pymandel/blob/master/RELEASE_NOTES.md"

[project.optional-dependencies]
test = [
    "black >= 23.1",
    "pylint >= 2.17",
    "pytest >= 7.2",
    "pytest-cov >= 4.0",
    "Sphinx >= 6.1.3",
    "sphinx-rtd-theme >= 1.2.0",
]

[tool.pylint]
jobs = 0
reports = "y"
py-version = "3.7"
#exit-zero = "y"
fail-under = "9.6"
fail-on = "E,F"
clear-cache-post-run = "y"
disable = """
    raw-checker-failed,
    bad-inline-option,
    locally-disabled,
    file-ignored,
    suppressed-message,
    useless-suppression,
    deprecated-pragma,
    use-symbolic-message-instead,
    too-many-instance-attributes,
    too-many-branches,
    too-many-statements,
    unused-private-member,
    too-few-public-methods,
    too-many-public-methods,
    too-many-locals,
    invalid-name
"""

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov --cov-report term-missing"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]