[build-system]
requires = ["setuptools>=66.0", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "pymandel"
dynamic = ["version"]
authors = [{ name = "semuadmin", email = "semuadmin@semuconsulting.com" }]
maintainers = [{ name = "semuadmin", email = "semuadmin@semuconsulting.com" }]
description = "Fractal generation GUI application"
license = { file = "LICENSE" }
keywords = [
    "PyMandel",
    "fractal",
    "Mandelbrot",
    "Julia",
    "Burning Ship",
    "Tricorn",
    "numba",
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Education",
    "Topic :: Utilities",
]

dependencies = ["numba>=0.61.0", "numpy>=2.1.0,<2.2.0", "Pillow>=9.3.0"]

[project.scripts]
pymandel = "pymandel.__main__:main"
mandelcli = "pymandel.mandelcli:main"
make_colormap = "colormaps.make_colormap:main"

[project.urls]
homepage = "https://github.com/semuconsulting/pymandel"
documentation = "https://www.semuconsulting.com/pymandel/"
repository = "https://github.com/semuconsulting/pymandel"
changelog = "https://github.com/semuconsulting/pymandel/blob/master/RELEASE_NOTES.md"

[project.optional-dependencies]
deploy = [
    "build",
    "packaging>=24.2",
    "pip",
    "setuptools>=66.0.0",
    "twine>=6.1.0",
    "wheel",
]
test = [
    "bandit",
    "black",
    "certifi",
    "isort",
    "pylint",
    "pytest",
    "pytest-cov",
    "Sphinx",
    "sphinx-rtd-theme",
]

[tool.setuptools.dynamic]
version = { attr = "pymandel._version.__version__" }

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
py_version = 39
profile = "black"

[tool.bandit]
exclude_dirs = ["docs", "examples", "references", "tests"]
skips = []

[tool.pylint]
jobs = 0
reports = "y"
recursive = "y"
py-version = "3.9"
fail-under = "9.6"
fail-on = "E,F"
clear-cache-post-run = "y"
disable = """
    raw-checker-failed,
    bad-inline-option,
    locally-disabled,
    file-ignored,
    suppressed-message,
    useless-suppression,
    deprecated-pragma,
    use-symbolic-message-instead,
    too-many-instance-attributes,
    too-many-branches,
    too-many-statements,
    unused-private-member,
    too-few-public-methods,
    too-many-public-methods,
    too-many-locals,
    invalid-name,
    missing-module-docstring
"""

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov --cov-report term-missing"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
